# gemini-mcp-server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-02-22-infrastructure-improvements-design.md  2026-02-22-infrastructure-improvements.md
src/gemini_mcp/: files.py  gemini.py  server.py
tests/: test_files.py  test_gemini.py  test_server.py
