[project]
name = "gemini-mcp-server"
version = "0.1.0"
description = "MCP server that delegates tasks to Gemini CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14,<3",
]

[project.scripts]
gemini-mcp-server = "gemini_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
